register modal designed

--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -13,6 +13,7 @@
 @import url('__input-error/popup__input-error.css');
 @import url('__input-error_color/popup__input-error_color.css');
 @import url('__delete_header/popup__delete_header.css');
+@import url('__modal-image/popup__modal-image.css');
 
 
 .popup {
