--- a/src/index.css
+++ b/src/index.css
@@ -1,34 +1,37 @@
-
-@import url('./vendor/normalize.css');
+@import url("./vendor/normalize.css");
 
 /*fonts*/
-@import url('./vendor/fonts.css');
+@import url("./vendor/fonts.css");
 
-@import url('./blocks/logo/logo.css');
-@import url('./blocks/page/page.css');
+@import url("./blocks/logo/logo.css");
+@import url("./blocks/page/page.css");
 
 /*header*/
-@import url('./blocks/header/header.css');
+@import url("./blocks/header/header.css");
 
 /*profile*/
-@import url('./blocks/profile/profile.css');
+@import url("./blocks/profile/profile.css");
 
 /*places*/
-@import url('./blocks/places/places.css');
+@import url("./blocks/places/places.css");
 
 /*footer*/
-@import url('./blocks/footer/footer.css');
+@import url("./blocks/footer/footer.css");
 
 /*popup*/
 
-@import url('./blocks/popup/popup.css');
-@import url('./blocks/popup/_open/popup_open.css');
-@import url('./blocks/popup/_open_image/popup_open_image.css');
+@import url("./blocks/popup/popup.css");
+@import url("./blocks/popup/_open/popup_open.css");
+@import url("./blocks/popup/_open_image/popup_open_image.css");
 
 /*signIn pages*/
-@import url('./blocks/signIn-page/signIn-page.css');
+@import url("./blocks/signIn-page/signIn-page.css");
 
 #root {
+  background-color: black;
+}
+
+html {
   background-color: black;
 }
 
